<resources>
    <string name="app_name">ELearning</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Explore</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="select_account_text">Select user type</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="top_categories">Top Categories</string>
    <string name="not_empty_required">Must not be empty</string>
    <string name="min_length">Minimum length</string>
    <string name="not_valid_email">Not valid email</string>
    <string name="dont_match_field">Fields don\'t match</string>
    <string name="my_courses">My Courses</string>

    <string name="student">Student</string>
    <string name="keyword">Keyword</string>
    <string name="search_courses">Search Courses</string>
    <string name="continue_learning">Continue Learning</string>
    <string name="current_progress">Current progress</string>
    <string name="about">About</string>
    <string name="expected_time_complete">Expected time to complete</string>
    <string name="teacher">Teacher</string>
    <string name="language">Language</string>
    <string name="enrolled_students">Enrolled students</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="error_load_video">Unable to retrieve video</string>
    <string name="link_video">Link to video</string>

</resources>