<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.skyit.elearning.student.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_courseDetailsFragment"
            app:destination="@id/courseDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_explore"
        android:name="dev.skyit.elearning.student.ui.dashboard.ExploreFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_explore" >
        <action
            android:id="@+id/action_navigation_explore_to_search_courses_minimal"
            app:destination="@id/search_courses_minimal" />
        <action
            android:id="@+id/action_navigation_explore_to_coursesListFragment"
            app:destination="@id/coursesListFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="dev.skyit.elearning.student.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="dev.skyit.elearning.student.ui.profile.StudentProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment

        android:id="@+id/search_courses_minimal"
        android:name="dev.skyit.elearning.student.ui.courses.SearchCoursesMinimalFragment"
        android:label="@string/search_courses"
        tools:layout="@layout/fragment_search_course">
        <action
            android:id="@+id/action_search_courses_minimal_to_courseDetailsFragment"
            app:destination="@id/courseDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/courseDetailsFragment"
        android:name="dev.skyit.elearning.student.ui.courses.details.CourseDetailsFragment"
        android:label="CourseDetailsFragment"
        tools:layout="@layout/fragment_course_details">
        <argument
            android:name="courseId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/coursesListFragment"
        android:name="dev.skyit.elearning.student.ui.courses.list.CoursesListFragment"
        tools:layout="@layout/fragment_courses_list"
        android:label="Courses">
        <argument
            android:name="categoryId"
            app:argType="string" />
    </fragment>
</navigation>